stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_log2_neg_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "4bb50cf5bfdd3b79d7554566974d6f2e6a77d28452bf3392f3e70ab3722817bb",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: log2-neg-deploy-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(Arithmetic(\"log2 must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9137,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9137,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f2b07614811548b7d42f0cc1880d6e09934b07350b499fe97f1d73eff9822370",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: log2-neg-deploy-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(Arithmetic(\"log2 must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9137,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9137,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ef7a5a1b14103b4618ec7e223bd9636d2c84ae0c60186ee35b4b6d1bc342b901",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: log2-neg-deploy-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(Arithmetic(\"log2 must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9137,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9137,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6580f9c3d1a8ee6a9ecd87c2b882f249922f6ac6a1edf6a05381c2b2456b12a6",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: log2-neg-deploy-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(Arithmetic(\"log2 must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9137,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9137,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "5f576c5ee081dd01d8f181dc1d70ab9394397c7795ee53c59cc414b73d7c87de",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: log2-neg-deploy-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(Arithmetic(\"log2 must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9137,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9137,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fa89a8be816a179d7d4a5709f83c7a6203d2b40bcd1e12030f124080c21d9afe",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: log2-neg-deploy-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(Arithmetic(\"log2 must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9137,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9137,
    ),
  )),
]
