stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_overflow_add_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "7600833561e242317c5b45acd6c888ebb708ed7a7f4bd28eade5e0525280cc18",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-add-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10722,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10722,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "989183577b9d873716f4bb287651834f9828b8193c0c6a7a864d2ccd074a0255",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-add-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10722,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10722,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "560227578872881abfc2c10001a2245ffe7537ed1e26aee4cde62254d0a9eed8",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-add-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10722,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10722,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "26bba789a949c7b273cd465c332329d4aeab5ae6babad9ca7652d22f66f221ec",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-add-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10722,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10722,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c43647e9ad19f36b132d2aad49f1fc7e2a5c9d1e51996ccd3bcf4b812000b4e6",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-add-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10722,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10722,
    ),
  )),
]
