stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_overflow_mul_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "e22c33cc2e1f1934f91fec78b053b33f4277f3fdb26142faab4bf251de8f03aa",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10726,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10726,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "bb2ed57b177bf518e34a8860ef2500c0bde42fdd50dc9be7acaf95b6ada3bf55",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10726,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10726,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3f2508942186a6836c74f18e4ce0927b694783e172a8e4b2ac97c9930c780a04",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10726,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10726,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "87a4bd66c926f9da12b3ed18a3ea0c45756cab5a3c809263f65c1f5e60ba77ca",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10726,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10726,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6245b3b45f5c77b43e662e752897cb3dfeae5c6465d30e73617ff69441f24708",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10726,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10726,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e2f9edda27a2220e6317349f937fadbec8b47dc09021b49f7352e52a35bb96d3",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10606,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10606,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "00ef28475f9d158c298d2fcf8ee232c9f3cd23495695650d052feac97236b634",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10606,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10606,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d67e3d829e6cac0d0d893b510cb2770491f426d2751d09962779d9f4d5dc895c",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10606,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10606,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ee6fc51ef585196e552983d85917768540c1dfd55878fa5f972ecbcf3c03922d",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10606,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10606,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fe7346481fc6ef7c4d5694b73bfef4a2544808851c9f4e2dc6d3639fb47d0b76",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10606,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10606,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4810aaff934a6d8993468b316b5190631f83d8e304c5cdeb9f6580fc029ea2cb",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-mul-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 83,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10606,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 83,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10606,
    ),
  )),
]
