stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_overflow_pow_at_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "892b9ca5e2ca82ef759dc1b0659ccc5c8c769178d89e57de8f6d5a6e21f24b68",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9350,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9350,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d6b38e1b71af698817e12176d6f1ae4d502e0b31620c1c3605f6b52ec31d4e9a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9350,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9350,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "70dc3e9230badbeaefe42918356ba814e53ae240ae439c52cf0032728486deec",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9350,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9350,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f3302ae0b074165e8e9989c685797671c74b064541adec7cc95ae07569c9aac0",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9350,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9350,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "72ea98203f2bb697955153813aca8de155c1c5c893882c745a3e1f0aa599ef39",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9350,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9350,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d7d447a8036605a04cbbc2ebb83e6b6848061e6a2bedce1d46628d3e17553255",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9238,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9238,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "67988f981dbb3216b69c97850eb1e3032f03d9a0c981fa29be70821b2d48fd7c",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9238,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9238,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9f932c6e659e6ac8da6d591c2e88c5d8ba2812a9e8ae93453c39b506648cf0c5",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9238,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9238,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "cd776be5ce668735264f3052d78fb3b39bacb86b2cd4a415d46c8de0f7f02be9",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9238,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9238,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4c6477cec610fc89a1e7b5efe03cf8cd3bd5b8f794065b94c3c530c18fe50b9c",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9238,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9238,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8b1ea16ddb82ae124e40ed363e6ac8c2b8ee2ff6f09b09826217000685eefbd5",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-pow-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9238,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9238,
    ),
  )),
]
