stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_overflow_to_int_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "046e2ff497114b8c2d9c5fc2dbd134cdb4682c332694d62039b3e3b7ec970c1a",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-to-int-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 84,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10659,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 84,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10659,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "87f1b9795f53c3eb139e1b18486310c3443e7201abe07e02aba3683a21851a85",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-to-int-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 84,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10659,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 84,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10659,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "aedb44e552d983b33c99f61ba5d9fd3579da0c6777e39139183656c5381ac0df",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-to-int-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 84,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10659,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 84,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10659,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1f31637c8bb9d68a117530bfa30b50854a4b4e7f53260dcce84c278bf7581e32",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-to-int-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 84,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10659,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 84,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10659,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "15251f2b839e89cd3b5a0ad50f61394a9798abe362c9929dc8a1101aacf75d76",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-to-int-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 84,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10659,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 84,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10659,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a46f732a114065ccb7f2ac0d7a1d174a6f79dfee57a07cf026d58ba86c5c8fba",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: overflow-to-int-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(ArithmeticOverflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 84,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10659,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 84,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10659,
    ),
  )),
]
